--- a/code/app/templates/macro/pagination.html
+++ b/code/app/templates/macro/pagination.html
@@ -1,24 +1,33 @@
 {% macro pagination(hiddens=True) %}
 
     {% raw %}
+
+         {{if total!=0}}
+
                   <div>
                     <ul class="pagination justify-content-center">
 
                       <li class="page-item {{if has_prev==true}}  {{else}} disabled {{/if}}" >
-                        <a class="page-link" href="#">上一页</a>
+                        <a class="page-link" href="javascript:pagination(${prev_num})">上一页</a>
                       </li>
 
                       {{each(i,cupage) iter_pages}}
 
 
                           {{if cupage==null}}
-                                 <li class="page-item">
+                                 <li class="page-item disable">
                                     <a class="page-link" >...</a>
                                  </li>
+                          {{else cupage==page}}
+
+                                 <li class="page-item  active">
+                                    <a class="page-link" href="javascript:pagination(${cupage})">${cupage}</a>
+                                 </li>
+
                           {{else}}
 
-                                 <li class="page-item">
-                                    <a class="page-link" href="javascript:page(${cupage})">${cupage}</a>
+                                 <li class="page-item ">
+                                    <a class="page-link" href="javascript:pagination(${cupage})">${cupage}</a>
                                  </li>
                           {{/if}}
 
@@ -27,10 +36,13 @@
 
 
                       <li class="page-item {{if has_next==true}}  {{else}} disabled {{/if}}">
-                        <a class="page-link" href="javascript:page()">下一页</a>
+                        <a class="page-link" href="javascript:pagination(${next_num})">下一页</a>
                       </li>
                     </ul>
                   </div>
+
+
+          {{/if}}
 
     {% endraw %}
 
