完成respful接口修改

--- a/code/app/templates/coreui/coreui-base.html
+++ b/code/app/templates/coreui/coreui-base.html
@@ -59,6 +59,8 @@
     <script src="{{ url_for('static', filename='toastr/build/toastr.min.js') }}"></script>
 
 
+    <script src="{{ url_for('static', filename='common/js/jquery.form.js') }}"></script>
+
     <script src="{{ url_for('static', filename='common.js') }}"></script>
 
 
