--- a/code/pyfw/templates/main/userlist.html
+++ b/code/pyfw/templates/main/userlist.html
@@ -192,16 +192,42 @@
                 </div>
             </div>
 
-
-             <div class="form-group row">
-                <label class="col-md-2 col-form-label" for="text-input">Text Input</label>
+            <div class="form-group row">
+                <label class="col-md-2 col-form-label" for="text-input">邮箱</label>
                 <div class="col-md-4">
-                    <input type="text" id="text-input" name="text-input" class="form-control" placeholder="Text">
+                    <input type="text" id="email" name="email" class="form-control" placeholder="邮箱">
                 </div>
 
-                <label class="col-md-2 col-form-label" for="text-input">Text Input2</label>
+                <label class="col-md-2 col-form-label" for="text-input">用户编号</label>
                 <div class="col-md-4">
-                    <input type="text" id="text-input" name="text-input" class="form-control" placeholder="Text">
+                    <input type="text" id="user_no" name="user_no" class="form-control" placeholder="用户编号">
+                </div>
+            </div>
+
+
+             <div class="form-group row">
+                <label class="col-md-2 col-form-label" for="text-input">性别</label>
+                <div class="col-md-4">
+                    <div class="form-check form-check-inline mr-1">
+                    <input class="form-check-input" type="radio" id="inline-radio1" value="option1" name="inline-radios">
+                    <label class="form-check-label" for="inline-radio1">男</label>
+                    </div>
+                    <div class="form-check form-check-inline mr-1">
+                    <input class="form-check-input" type="radio" id="inline-radio2" value="option2" name="inline-radios">
+                    <label class="form-check-label" for="inline-radio2">女</label>
+                    </div>
+                </div>
+
+
+                <label class="col-md-2 col-form-label" for="text-input">用户状态</label>
+                <div class="col-md-4">
+                    <select class="form-control">
+                      <option>正常</option>
+                      <option>锁定</option>
+                      <option>停用</option>
+
+
+                    </select>
                 </div>
             </div>
 
